tutorial progress. tailwind installed badly

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 			</section>
 
 			<section>
-				<h1>TITLE SLIDE</h1>
+				<h1>TUTORIAL</h1>
+				<h2>Modern web frontend dev with Django, HTMX and friends</h2>
 			</section>
 
 			<section>
@@ -102,6 +103,58 @@
 
 
 			</section>
+
+			<section>
+				<h2>How will this work</h2>
+
+				<ul>
+					<li>Start with a high level view of how everything fits together</li>
+					<li>You will come up with something you want to build</li>
+					<li>Very very practical</li>
+				</ul>
+			</section>
+
+			<section>
+				<h1>DEMO</h1>
+			</section>
+
+			<section>
+				<h2>What's in the box?</h2>
+				TODO
+			</section>
+
+			<section>
+				<section>
+					<h2>CRUD</h2>
+
+					<ul>
+						<li>C = Create</li>
+						<li>R = Read</li>
+						<li>U = Update</li>
+						<li>D = Delete</li>
+					</ul>
+				</section>
+
+				<section>
+					<ul>
+						<li>POST for Create</li>
+						<li>GET for Read</li>
+						<li>PUT for Update</li>
+						<li>DELETE for ___?</li>
+					</ul>
+				</section>
+
+			</section>
+
+			<section>
+				<h1> What are you going to build?</h1>
+			</section>
+
+			<section>
+				<h1>Time to start building</h1>
+			</section>
+
+
 
 			<section>
 				<h2>The end</h2>
